# tokenomics-simulator-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: release.yml  test.yml
benches/: engine_bench.rs
examples/: README.md  advanced_options.rs  basic_simulation.rs  cli.rs  custom_token.rs  log.rs  multiple_simulations.rs  serde.rs  simulation_on_ethereum.rs
examples/api/: main.rs  simulation.rs  validator.rs
examples/cli/: README.md  main.rs
src/: engine.rs  engine_builder.rs  engine_config.rs  engine_config_builder.rs  lib.rs  report.rs  simulation.rs  token.rs  token_builder.rs  user.rs  vesting.rs
src/engine_blockchain/: ethereum.rs  mod.rs  solana.rs
