[package]
name = "tokenomics-simulator"
description = "Simulate trades, calculate various metrics, and predict user behaviour over different time intervals."
version = "0.1.29"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://simetrics.io"
authors = ["simetrics <info@simetrics.io>"]
keywords = ["tokenomics", "metrics", "analytics", "crypto", "simulator"]
repository = "https://github.com/simetrics-io/tokenomics-simulator-rs"
documentation = "https://docs.rs/tokenomics-simulator"
exclude = [".github/**", "examples/**", "benches/**"]

[lib]
name = "tokenomics_simulator"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.9.0"
rust_decimal = { version = "1.36.0", features = [
  "maths",
  "serde-with-arbitrary-precision",
  "serde-with-float",
] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
twox-hash = "2.1.0"
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
clap = { version = "4.5.28", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "engine_bench"
harness = false

[[example]]
name = "cli"
path = "examples/cli.rs"

[[example]]
name = "basic_simulation"
path = "examples/basic_simulation.rs"

[[example]]
name = "custom_token"
path = "examples/custom_token.rs"

[[example]]
name = "advanced_options"
path = "examples/advanced_options.rs"

[[example]]
name = "multiple_simulations"
path = "examples/multiple_simulations.rs"
