[package]
name = "tokenomics-simulator"
description = "Simulate trades, calculate various metrics, and predict user behaviour over different time intervals."
version = "0.2.2"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://simetrics.io"
authors = ["simetrics <info@simetrics.io>"]
keywords = ["tokenomics", "metrics", "analytics", "crypto", "simulator"]
repository = "https://github.com/simetrics-io/tokenomics-simulator-rs"
documentation = "https://docs.rs/tokenomics-simulator"
exclude = [".github/**", "examples/**", "benches/**"]

[lib]
name = "tokenomics_simulator"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
log = { version = "0.4.26", optional = true }
rand = "0.9.0"
rust_decimal = { version = "1.36.0", features = [
  "maths",
  "serde-with-arbitrary-precision",
  "serde-with-float",
] }
serde = { version = "1.0.218", features = ["derive"], optional = true }
thiserror = "2.0.11"
twox-hash = "2.1.0"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
serde_json = "1.0.139"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "engine_bench"
harness = false

[[example]]
name = "cli"
path = "examples/cli.rs"

[[example]]
name = "basic_simulation"
path = "examples/basic_simulation.rs"

[[example]]
name = "custom_token"
path = "examples/custom_token.rs"

[[example]]
name = "advanced_options"
path = "examples/advanced_options.rs"

[[example]]
name = "multiple_simulations"
path = "examples/multiple_simulations.rs"

[[example]]
name = "log"
path = "examples/log.rs"
required-features = ["log"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde"]
