[package]
name = "tokenomics-simulator"
description = "Simulate trades, calculate various metrics, and predict user behaviour over different time intervals."
version = "0.5.12"
license = "MIT"
edition = "2021"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
keywords = ["tokenomics", "metrics", "analytics", "crypto", "simulator"]
repository = "https://github.com/slavik-pastushenko/tokenomics-simulator-rs"
documentation = "https://docs.rs/tokenomics-simulator"
exclude = [".github/**", "examples/**", "benches/**"]

[lib]
name = "tokenomics_simulator"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
log = { version = "0.4.28", optional = true }
rand = "0.9.1"
rust_decimal = { version = "1.37.2", features = [
  "maths",
  "serde-with-arbitrary-precision",
  "serde-with-float",
] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
axum = "0.8.4"
criterion = { version = "0.7.0", features = ["html_reports"] }
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.6"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.12"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "engine_bench"
harness = false

[[example]]
name = "api"
path = "examples/api/main.rs"
required-features = ["serde"]

[[example]]
name = "cli"
path = "examples/cli.rs"

[[example]]
name = "basic_simulation"
path = "examples/basic_simulation.rs"

[[example]]
name = "custom_token"
path = "examples/custom_token.rs"

[[example]]
name = "advanced_options"
path = "examples/advanced_options.rs"

[[example]]
name = "multiple_simulations"
path = "examples/multiple_simulations.rs"

[[example]]
name = "log"
path = "examples/log.rs"
required-features = ["log"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde"]
